<resources>
    <string name="app_name">mePower</string>
    <string name="about_app">Цей мобільний додаток має на меті забезпечити освітню діяльність, надихнути користувачок, запропонувати психологічну підтримку.\n\nНаш проект є некомерційною організацією і має на меті допомогти у вирішенні глобальних проблем, особливо тих, що стосуються українських жінок.</string>
    <string name="welcomePage_hello">Вітємо у mePower</string>
    <string name="welcomePage_text">Почувай себе комфортно</string>
    <string name="welcomePage_login">Увійти</string>
    <string name="welcomePage_registartion">Зареєструватись</string>
    <string name="Registartion">Реєстрація</string>
    <string name="Join_to_safeCo">Приєднуйся до безпечного ком\'юніті</string>
    <string name="error_email">Введіть коректну пошту</string>
    <string name="error_password">Введіть пароль, який більше 5 символів</string>
    <string name="error_signUpEmptyFields">Введіть будь ласка інформацію</string>
    <string name="error_name">Будь ласка введіть це поле</string>
    <string name="error_login_exist">Цей логін вже зайнятий. Введіть інший</string>
    <string name="error_email_exist">Ця пошта вже зайнята</string>
    <string name="error_gender">Будь ласка оберіть свою стать</string>
    <string name="error_date">Будь ласка введіть дату у форматі dd/mm/yyyy</string>
    <string name="error_login_containsCharacters">Логін не може містити такі знаки як . $ # [ ]</string>
    <string name="toast_signup_succes">Ви успішно зареєстровані</string>
    <string name="toast_signup_failed">Виникла помилка під час реєстрації</string>
    <string name="Email">Пошта</string>
    <string name="Name">Ім\'я</string>
    <string name="Birthday">dd/mm/yyyy</string>
    <string name="gender">Стать</string>
    <string name="Happy_to_see_you">Раді тебе бачити!</string>
    <string name="error_logIn_password">Неправильно введен пароль</string>
    <string name="error_logIn_email">Неправильно введена пошта</string>
    <string name="login_with_google">Login with Google</string>
    <string name="Login">Логін</string>
    <string name="Password">Пароль</string>
    <string name="Enter">Вхід</string>
    <string name="login_google">Увійти з Google</string>
    <string name="verify_email_toast">Будь ласка, підтвердіть свою пошту</string>
        <string name="hello">Привіт, %s!</string>
        <string name="main_sortButton_All">Всі</string>
        <string name="contentDescription_main_button_addNews">Додати нову публікацію</string>
        <string name="contentDescription_main_button_settings">Перейти до налаштувань</string>
    <string name="choose_theme">Оберіть тему</string>
    <string name="select_image">Оберіть фото</string>
    <string name="input_text">Введіть текст</string>
    <string name="input_link">Посилання</string>
    <string name="input_title">Введіть заголовок</string>
    <string name="input_caption">Введіть короткий опис</string>
    <string name="settings_userInfo">Дані користувача</string>
    <string name="logout_text">Вийти з акаунту</string>
    <string name="Sections">Розділи</string>
    <string name="action_settings">Налаштування</string>
    <string name="helpCenter_name">Центри підтримки</string>
    <string name="help_centers">Центри підтримки</string>
    <string name="user_info">Дані користувача</string>
    <string name="date_birthday">День народження</string>
    <string name="change_password">Змінити пароль</string>
    <string name="choose_gender">Оберіть свою стать</string>
    <string name="aboutApp_text">Про додаток</string>
    <string name="developers">Працювали: Ольга Капець, Єфімова Валерія, Богдана Лемішовська, Ірина Лабенко.</string>
    <string name="special_thanks">Окреме дякую: Lindsay Rawitscher.</string>
    <string name="app_version">App version:1.0.0</string>
    <string name="about_app_email">Пошта для зв\'язку: mee.we.women@gmail.com</string>
    <string name="loading">Завантаження...</string>
    <string name="saving">Збереження...</string>
    <string name="text_full_logo">Повний логотип mePower</string>
    <string name="backOnMainPage_button">Повернутись на головну сторінку</string>
    <string name="back_to_settings">Повернутись до налаштувань</string>
    <string name="backToSections">Повернутись до розділів</string>
    <string name="back_to_welcomePage">Повернутись на сторінку привітання</string>
    <string name="email_forverification">%s</string>
    <string name="email_verification_text">Лист було відправлено на вашу пошту,</string>
    <string name="email_ver_button_sendAgain">Відправити знову</string>
    <string name="card_deleteNews_text1">Ви дійсно хочете</string>
    <string name="card_deleteNews_text2">видалити цей запис?</string>
    <string name="change">Змінити</string>
    <string name="or">Або</string>
    <string name="save">Зберегти</string>
    <string name="update">Оновити</string>
    <string name="button_next">Продовжити</string>
    <string name="hi">Привіт!</string>
    <string name="button_delete">Видалити</string>
    <string name="button_back">Назад</string>
    <string name="popUp_explanation">Використовуй \\\\n щоб\nпочати з нової строки</string>
    <string name="affirmation_1">Не применшуй свої досягнення - цінуй маленькі перемоги.</string>
    <string name="affirmation_2">Будь собою! Ні в кого це не виходить краще, ніж у тебе!</string>
    <string name="affirmation_3">Я знаю, зараз тобі тяжко. Але це минеться, і ти знову будеш щаслива/ий. Продовжуйте рухатися вперед.</string>
    <string name="affirmation_4">Доброта повинна поширюватися і на ставлення до самої себе, до своїх недоліків. Розчарування при невдачі закономірне, але не дозволяйте йому перетворитися на злобу чи гіркоту по відношенню до себе.</string>
    <string name="affirmation_5">Говорити \"ні\" - нормально, будь то зустрічі, додаткова робота чи якась послуга. Ви не повинні відчувати себе погано – твої межі повинні поважати.</string>
    <string name="affirmation_6">Психічне здоров\'я – це правда дуже важливо! Будь ласка, дбайте про себе!</string>
    <string name="affirmation_7">Спостерігай, але не вбирай. Кохайте, але не залежте. Хоч, але не потребуй. Відчувай, але не зациклюйся.</string>
    <string name="affirmation_8">Будьте добрішими до себе.</string>
    <string name="affirmation_9">Не обов\'язково у своїй травмі та болю знаходити якийсь сенс чи урок. Іноді погане просто трапляється, і шукати за ним якийсь сенс марно. Можна сприймати це як лайновий період твого життя, наслідки якого ти намагаєшся переживати день за днем. І все. Якщо це так. Ти маєш на це повне право.</string>
    <string name="affirmation_10">Ти маєш право пишатися собою за речі, які можуть здатися іншим безглуздим, як просунутися у відеогрі, або закінчити картину за номерами. Ти заслуговуєш на гордість за своє досягнення.</string>
    <string name="affirmation_11">Живіть для себе. Живіть щиро і без сором\'язливості, тому що ви не були народжені для того, щоб справляти якесь враження, ви були народжені для того, щоб бути собою. І якщо хочете змінитись, то вперед, ви можете бути тим, ким тільки захочете. Все буде гаразд, і ви дістанетеся туди, де хочете бути, і все, про що вам потрібно хвилюватися, це турбота про себе та люди, яких ви любите і які люблять вас у відповідь.</string>
    <string name="affirmation_12">Незалежно від того, наскільки ви прогресивні чи начитані, у вашому житті завжди будуть моменти, коли хтось виступить проти чогось, що настільки вкоренилося у вашій культурі, що ви навіть не замислювалися про це раніше. І ви скажете: «а, мені ніколи не спадало на думку заперечувати це, але ти прав/а», і це не означає, що раніше ви були «морально токсичні», це означає, що ви не всезнаючий чоловік і здатні до зростання.</string>
    <string name="affirmation_13">Бути повільним у житті – це чудово. Витрачати більше часу на те, щоб розібратися в житті, ніж інші, – це не так уже й погано. Багато суперуспішних людей були пізніми квіточками. Хто знає, яких дивовижних речей ви могли б досягти, якби більше зцілювалися.</string>
    <string name="affirmation_14">Якщо ми не говоритимемо людям, як ми почуваємося, як вони дізнаються?</string>
    <string name="affirmation_15">Якщо щось вас виснажує, значить, це не для вас. Завжди пам\'ятайте це.</string>
    <string name="affirmation_16">Якщо ваша доброта не приходить до вас природно і легко, це анітрохи не знецінює її – насправді це змушує поважати вас ще більше за те, що ви прагнете бути добрим, навіть якщо це важко.</string>
    <string name="affirmation_17">Чи можеш просто повірити в себе і подивитися, що станеться? Ти витратив/ла весь цей час на невпевненість, але насправді до чого це тебе призвело? Вір в себе. Ти здатніша/ий, ніж думаєш.</string>
    <string name="affirmation_18">Продовжуй пробувати нові речі, які запалюють твою іскру. Речі, які змушують тебе посміхатися. Будь з людьми, які змушують тебе сміятися. Продовжуй намагатися і приймай кожен момент, коли ти почуваєшся радісним.</string>
    <string name="affirmation_19">Пам\'ятайте, що аб\'юз не завжди виглядає як крики, удари чи побої. Аб\'юз може бути такими коментарями на кшталт: "ти гарна, коли худа", аб\'юз може бути тихим, злісним і підступним, як: "я єдина, хто розуміє тебе і якби хто-небудь знав про це, то вони були б в жаху, але я люблю тебе за це”, “твої друзі ніколи не розуміють так, як це роблю я”.</string>
    <string name="affirmation_20">Час дати собі те, що тобі потрібно.</string>
    <string name="affirmation_21">Завжди буде хтось красивіший, розумніший і успішніший за тебе… але ніхто ніколи не буде тобою.</string>
    <string name="affirmation_22">Звернення до людей, для яких доброта – не найпростіший чи найпривабливіший варіант, але які все одно прагнуть до неї. Ви справляєтеся чудово!</string>
    <string name="affirmation_23">Навчися пишатися тим, де ти знаходишся, не відмовляючись від того, де ти міг/ла би бути. Зростання відбувається безперервно.</string>
    <string name="affirmation_24">Найважливіший день – це день, коли ти вирішиш, що ти досить гарна/ий для себе. Це день, коли ти станеш вільною/им.</string>
    <string name="affirmation_25">Будь ласка, як тільки помічаєш, що людина вибачається за нібито надто сильне захоплення чи радість, в ту ж секунду активно включайся та врубай максимальний ентузіазм. Не треба робити так само, як чинили з усіма з нас — намагатися грубо заткнути людину, показушно позіхати і дратуватися. Постарайтеся підтримати людину, зберегти іскорки щастя в її очах і нотки веселощів, що дзвонять у кожному його слові.</string>
    <string name="affirmation_26">Сказати "не бійся" - це як сказати "не відсмикуй руку від вогню" або "не моргай", перестати бути людиною. Я боюся, ти боїшся і час від часу ми боятимемося, це природно. "Зроби це, незважаючи на страх" - ось що треба собі говорити.</string>
    <string name="affirmation_27">Навіть коли ви почуваєтеся розбитими, ви все ще такі сильні. Є що сказати про те, як ви тримаєте себе в руках і продовжуєте рухатися навіть якщо вам здається, що ви розбилися. Не зупиняйтесь. Це ваше зцілення. Воно не повинно бути гарним чи граціозним. Ви просто повинні продовжувати йти.</string>
    <string name="affirmation_28">Немає нічого поганого в тому, щоб вести просте спокійне життя, заробляти стільки, щоб вистачало на проживання, мати невелику квартиру, де вам комфортно, і просто жити. Не обов\'язково постійно прагнути йти вперед і вгору. Деколи краще, що ви можете зробити для себе, - це просто бути.</string>
    <string name="affirmation_29">Стежте за гігієною свого інформаційного поля — читайте більше людей, що надихають, і намагайтеся обмежити себе від людей з токсичною ментальністю. Не приймайте чужу отруту - вбирайте любов, синтезуйте світло і діліться ним.</string>
</resources>