<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:contentDescription="@string/backOnMainPage_button"
        android:elevation="4dp"
        android:focusable="true"
        app:srcCompat="@drawable/arrow_back_baseline"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/Sections"
        android:textColor="@color/bistre"
        android:textSize="28sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/settingsDep_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:drawableLeft="@drawable/settings_icon"
        android:paddingStart="12dp"
        android:paddingEnd="8dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        tools:ignore="RtlHardcoded" />
    <Button
        android:id="@+id/helpCenter_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/helpCenter_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:drawableLeft="@drawable/baseline_fmd_good_24"
        android:paddingStart="10dp"
        android:paddingEnd="8dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        tools:ignore="RtlHardcoded" />
    <Button
        android:id="@+id/aboutApp_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutApp_text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:drawableLeft="@drawable/baseline_app_settings_alt_24"
        android:paddingStart="10dp"
        android:paddingEnd="8dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        tools:ignore="RtlHardcoded" />




</LinearLayout>