<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewsUpdate"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/lavender_border"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageButton
                android:id="@+id/updateButton_close"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="2dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/arrow_back_baseline" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_image"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/updateImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_image_search_24" />

            <EditText
                android:id="@+id/updateTitle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:hint="@string/input_title"
                android:padding="16dp"
                android:textColor="@color/purple"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/updateCaption"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:hint="@string/input_caption"
                android:padding="16dp"
                android:textColor="@color/purple"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/updateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:gravity="top"
                android:hint="@string/input_text"
                android:inputType="textMultiLine"
                android:minLines="12"
                android:padding="16dp"
                android:textColor="@color/purple"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/updateLink"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:hint="@string/input_link"
                android:padding="16dp"
                android:textColor="@color/purple"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedThemeField"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:errorEnabled="true">
                <AutoCompleteTextView
                    android:id="@+id/uploadTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/lavender_border"
                    android:inputType="none"
                    android:padding="18dp"
                    android:hint="@string/choose_theme"
                    android:textColor="@color/purple"
                    android:textSize="14sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/update"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>